crates/kul-core/tests/snapshots/export__example_12_polygamy_with_birth_family_with_positions.snap
---
source: crates/kul-core/tests/export.rs
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "graph": {
    "persons": [
      {
        "id": "ramesh",
        "name": "Ramesh Kumar",
        "gender": "male",
        "born": {
          "value": "1920-03-15",
          "precision": "day",
          "circa": false
        },
        "span": [
          848,
          914
        ]
      },
      {
        "id": "sita",
        "name": "Sita Kumar",
        "gender": "female",
        "born": {
          "value": "1922-08-22",
          "precision": "day",
          "circa": false
        },
        "span": [
          915,
          981
        ]
      },
      {
        "id": "devraj",
        "name": "Devraj Kumar",
        "gender": "male",
        "born": {
          "value": "1948-06-21",
          "precision": "day",
          "circa": false
        },
        "span": [
          1115,
          1203
        ]
      },
      {
        "id": "meera",
        "name": "Meera",
        "gender": "female",
        "born": {
          "value": "1955-03-08",
          "precision": "day",
          "circa": false
        },
        "span": [
          1204,
          1270
        ]
      },
      {
        "id": "alice",
        "name": "Alice Sharma",
        "gender": "female",
        "born": {
          "value": "1950-04-12",
          "precision": "day",
          "circa": false
        },
        "span": [
          1271,
          1337
        ]
      },
      {
        "id": "priya",
        "name": "Priya Kumar",
        "gender": "female",
        "born": {
          "value": "1994-12-01",
          "precision": "day",
          "circa": false
        },
        "span": [
          1512,
          1599
        ]
      }
    ],
    "marriages": [
      {
        "id": "m_ramesh_sita",
        "spouses": [
          "ramesh",
          "sita"
        ],
        "start": {
          "value": "1945-06-10",
          "precision": "day",
          "circa": false
        },
        "span": [
          983,
          1035
        ]
      },
      {
        "id": "m_devraj_meera",
        "spouses": [
          "devraj",
          "meera"
        ],
        "start": {
          "value": "1990-01-01",
          "precision": "day",
          "circa": false
        },
        "span": [
          1339,
          1393
        ]
      },
      {
        "id": "m_devraj_alice",
        "spouses": [
          "devraj",
          "alice"
        ],
        "start": {
          "value": "1992-02-14",
          "precision": "day",
          "circa": false
        },
        "span": [
          1394,
          1448
        ]
      }
    ],
    "parenthoodLinks": [
      {
        "marriageId": "m_ramesh_sita",
        "childId": "devraj",
        "kind": "biological",
        "span": [
          1184,
          1203
        ]
      },
      {
        "marriageId": "m_devraj_alice",
        "childId": "priya",
        "kind": "biological",
        "span": [
          1579,
          1599
        ]
      }
    ]
  }
}
