crates/kul-core/tests/snapshots/export__example_13_inter_family_marriage_cytoscape.snap
---
source: crates/kul-core/tests/export.rs
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "graph": {
    "nodes": [
      {
        "data": {
          "id": "p:rajesh",
          "type": "person",
          "name": "Rajesh Patel",
          "gender": "male",
          "born": {
            "value": "1920-04-11",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:saroj",
          "type": "person",
          "name": "Saroj Patel",
          "gender": "female",
          "born": {
            "value": "1923-09-02",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:mahesh",
          "type": "person",
          "name": "Mahesh Sharma",
          "gender": "male",
          "born": {
            "value": "1921-07-19",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:lata",
          "type": "person",
          "name": "Lata Sharma",
          "gender": "female",
          "born": {
            "value": "1924-02-28",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:alice",
          "type": "person",
          "name": "Alice Patel",
          "gender": "female",
          "born": {
            "value": "1948-03-22",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:bob",
          "type": "person",
          "name": "Bob Sharma",
          "gender": "male",
          "born": {
            "value": "1949-11-30",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:kiran",
          "type": "person",
          "name": "Kiran Patel",
          "gender": "female",
          "born": {
            "value": "1975-04-18",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_host_parents",
          "type": "marriage",
          "start": {
            "value": "1945-12-05",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_bob_parents",
          "type": "marriage",
          "start": {
            "value": "1946-08-14",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_alice_bob",
          "type": "marriage",
          "start": {
            "value": "1972-06-10",
            "precision": "day",
            "circa": false
          }
        }
      }
    ],
    "edges": [
      {
        "data": {
          "source": "m:m_host_parents",
          "target": "p:rajesh",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_host_parents",
          "target": "p:saroj",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_bob_parents",
          "target": "p:mahesh",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_bob_parents",
          "target": "p:lata",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_alice_bob",
          "target": "p:alice",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_alice_bob",
          "target": "p:bob",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_host_parents",
          "target": "p:alice",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_bob_parents",
          "target": "p:bob",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_alice_bob",
          "target": "p:kiran",
          "type": "biological_child"
        }
      }
    ]
  }
}
