crates/kul-core/tests/snapshots/export__failure_envelope_duplicate_id.snap
---
source: crates/kul-core/tests/export.rs
expression: json
---
{
  "ok": false,
  "diagnostics": [
    {
      "code": "KUL-R01",
      "severity": "error",
      "message": "id `alice` is already used by another person — pick a different id (every id must be unique across all persons and marriages)",
      "primary": {
        "file": "test.kul",
        "byteStart": 47,
        "byteEnd": 52,
        "line": 2,
        "column": 8
      },
      "related": [
        {
          "label": "first declared here as a person",
          "file": "test.kul",
          "byteStart": 7,
          "byteEnd": 12,
          "line": 1,
          "column": 8
        }
      ]
    }
  ]
}
